force-app/main/default/objects/malive__MALiveWorkingHours__c/malive__MALiveWorkingHours__c.object-meta.xml
<CustomObject>
    <label>MA Live Working Hours</label>
    <nameField>
        <label>MA Live Working Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Live Working Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>