force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__FridayEndTime__c.field-meta.xml
<CustomField>
    <fullName>malive__FridayEndTime__c</fullName>
    <label>Friday End Time</label>
    <type>Time</type>
</CustomField>