force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__FridayStartTime__c.field-meta.xml
<CustomField>
    <fullName>malive__FridayStartTime__c</fullName>
    <label>Friday Start Time</label>
    <type>Time</type>
</CustomField>