force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__MondayEndTime__c.field-meta.xml
<CustomField>
    <fullName>malive__MondayEndTime__c</fullName>
    <label>Monday End Time</label>
    <type>Time</type>
</CustomField>