force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__SaturdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>malive__SaturdayEndTime__c</fullName>
    <label>Saturday End Time</label>
    <type>Time</type>
</CustomField>