force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__SaturdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>malive__SaturdayStartTime__c</fullName>
    <label>Saturday Start Time</label>
    <type>Time</type>
</CustomField>