force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__SundayEndTime__c.field-meta.xml
<CustomField>
    <fullName>malive__SundayEndTime__c</fullName>
    <label>Sunday End Time</label>
    <type>Time</type>
</CustomField>