force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__SundayStartTime__c.field-meta.xml
<CustomField>
    <fullName>malive__SundayStartTime__c</fullName>
    <label>Sunday Start Time</label>
    <type>Time</type>
</CustomField>