force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__ThursdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>malive__ThursdayEndTime__c</fullName>
    <label>Thursday End Time</label>
    <type>Time</type>
</CustomField>