force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__ThursdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>malive__ThursdayStartTime__c</fullName>
    <label>Thursday Start Time</label>
    <type>Time</type>
</CustomField>