force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__TuesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>malive__TuesdayStartTime__c</fullName>
    <label>Tuesday Start Time</label>
    <type>Time</type>
</CustomField>