force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__WednesdayEndTime__c.field-meta.xml
<CustomField>
    <fullName>malive__WednesdayEndTime__c</fullName>
    <label>Wednesday End Time</label>
    <type>Time</type>
</CustomField>