force-app/main/default/objects/malive__MALiveWorkingHours__c/fields/malive__WednesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>malive__WednesdayStartTime__c</fullName>
    <label>Wednesday Start Time</label>
    <type>Time</type>
</CustomField>